[gd_scene load_steps=2 format=3 uid="uid://clvr2siqvathu"]

[ext_resource type="Script" path="res://sample/diisis_intro/screens/options_screen.gd" id="1_1als3"]

[node name="OptionsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1als3")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 37

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="OptionMenusButtonContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="GameButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/OptionMenusButtonContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "Game"

[node name="TextButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/OptionMenusButtonContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "Text"

[node name="DisplayButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/OptionMenusButtonContainer"]
layout_mode = 2
text = "Display"

[node name="SoundButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/OptionMenusButtonContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "Sound"

[node name="OptionMenusContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="GameMenu" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/OptionMenusContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/OptionMenusContainer/GameMenu"]
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer/OptionMenusContainer/GameMenu/VBoxContainer"]
layout_mode = 2
bbcode_enabled = true
text = "[center]Progress is saved automatically."
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/OptionMenusContainer/GameMenu/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SaveButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/OptionMenusContainer/GameMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Save"

[node name="MainMenuButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/OptionMenusContainer/GameMenu/VBoxContainer/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "Main Menu"

[node name="QuitButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/OptionMenusContainer/GameMenu/VBoxContainer/HBoxContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "Quit"

[node name="TextMenu" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/OptionMenusContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/OptionMenusContainer/TextMenu"]
layout_mode = 2

[node name="DisplayMenu" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/OptionMenusContainer"]
layout_mode = 2

[node name="SoundMenu" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/OptionMenusContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="GridContainer" type="GridContainer" parent="PanelContainer/MarginContainer/VBoxContainer/OptionMenusContainer/SoundMenu"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/OptionMenusContainer/SoundMenu/GridContainer"]
layout_mode = 2
text = "Master"

[node name="MasterVolumeSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/OptionMenusContainer/SoundMenu/GridContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
max_value = 1.0
step = 0.01
value = 1.0

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/OptionMenusContainer/SoundMenu/GridContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "Music"

[node name="MusicVolumeSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/OptionMenusContainer/SoundMenu/GridContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
max_value = 1.0
step = 0.01
value = 1.0

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/OptionMenusContainer/SoundMenu/GridContainer"]
auto_translate_mode = 1
layout_mode = 2
text = "SFX"

[node name="SFXVolumeSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/OptionMenusContainer/SoundMenu/GridContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 0
max_value = 1.0
step = 0.01
value = 1.0

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "Close"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/OptionMenusButtonContainer/GameButton" to="." method="set_menu" binds= [0]]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/OptionMenusButtonContainer/TextButton" to="." method="set_menu" binds= [1]]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/OptionMenusButtonContainer/DisplayButton" to="." method="set_menu" binds= [2]]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/OptionMenusButtonContainer/SoundButton" to="." method="set_menu" binds= [3]]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/OptionMenusContainer/GameMenu/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/OptionMenusContainer/GameMenu/VBoxContainer/HBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/OptionMenusContainer/SoundMenu/GridContainer/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/OptionMenusContainer/SoundMenu/GridContainer/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="PanelContainer/MarginContainer/VBoxContainer/OptionMenusContainer/SoundMenu/GridContainer/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
